--- a/gallery/index.html
+++ b/gallery/index.html
@@ -57,8 +57,26 @@ body {
   background: url("3.jpeg") no-repeat
     center top/cover;
 }
-
-
+.slide:nth-child(4) {
+  background: url("4.jpeg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(5) {
+  background: url("5.jpeg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(6) {
+  background: url("6.jpeg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(7) {
+  background: url("7.jpeg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(8) {
+  background: url("8.jpeg") no-repeat
+    center top/cover;
+}
 .buttons button#prev {
   position: absolute;
   top: 50%;
@@ -110,6 +128,11 @@ body {
   <!-- partial:index.partial.html -->
   <div class="slider">
     <div class="slide current"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
 
