--- a/gallery/index.html
+++ b/gallery/index.html
@@ -74,7 +74,7 @@ body {
     center top/cover;
 }
 .slide:nth-child(8) {
-  background: url("8.jpeg") no-repeat
+  background: url("8.png") no-repeat
     center top/cover;
 }
 .buttons button#prev {
